Add matrix sparsity analysis tool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,9 @@ rand = "0.6"
 name = "codec_benchmark"
 harness = false
 
+[[bin]]
+name = "matrix_sparsity"
+path = "src/bin_matrix_sparsity.rs"
+
 [profile.release]
 debug = true
