--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Christopher Berner <christopherberner@gmail.com>"]
 
 [dependencies]
 primal = "0.2"
+petgraph = "0.4"
 
 [dev-dependencies]
 criterion = "0.2"
