--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,9 @@ rand = "0.6"
 name = "codec_benchmark"
 harness = false
 
+[[bench]]
+name = "matrix_sparsity"
+harness = false
+
 [profile.release]
 debug = true
