Replace FOSSA with lichking license checker
Also add prominent contribution statement

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: rust
 rust:
   - stable
+before_script:
+  - cargo install cargo-lichking
+script:
+  - cargo test
+  - cargo lichking check
