feat: Derived serde::{Serialize, Deserialize} on all public types.
This should make it possible to use serde to serialize and deserialize
encoders/decoders while they are in use.  This is makes it possible to
ship them between processes as needed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ version = "1.0.0"
 edition = "2018"
 authors = ["Christopher Berner <christopherberner@gmail.com>"]
 
+[dependencies]
+serde = {version = "1.0.102", features=["std", "derive"]}
+
 [dev-dependencies]
 criterion = "0.3"
 primal = "0.2"
