--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: rust
 rust:
   - stable
+  - nightly
 before_script:
   - cargo install cargo-lichking
   - rustup component add rustfmt
   - rustup component add clippy
+  - rustup override set --path python nightly
 script:
   - make test
+  - make build-py
