--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
   - rustup component add clippy
   - rustup install nightly --profile minimal
   - rustup override set --path python nightly
+  - sudo apt install python3 python3-dev pip3
   - pip3 install maturin
 install:
   []
