--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,32 @@
-language: rust
-rust:
-  - stable
-before_script:
-  - cargo install cargo-lichking
-  - rustup component add rustfmt
-  - rustup component add clippy
-  - rustup install nightly --profile minimal
-  - rustup override set --path python nightly
-  - sudo apt update && sudo apt install python3 python3-pip python3-dev
-  - pip3 install maturin
-install:
-  []
-script:
-  - make test
-  - make build_py
-cache:
-  - cargo
-  - pip
+matrix:
+  fast_finish: true
+  include:
+    - name: Run tests
+      language: rust
+      rust: stable
+      before_script:
+        - cargo install cargo-lichking
+        - rustup component add rustfmt
+        - rustup component add clippy
+      install:
+        []
+      script:
+        - make test
+      cache: cargo
+
+    - name: Build CPython wrapper
+      language: rust
+      rust: nightly
+      before_script:
+        - cargo install cargo-lichking
+        - rustup component add rustfmt
+        - rustup component add clippy
+        - sudo apt update && sudo apt install python3 python3-pip python3-dev
+        - pip3 install maturin
+      install:
+        []
+      script:
+        - make build_py
+      cache:
+        - cargo
+        - pip
