--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,37 @@
-language: rust
-rust:
-  - stable
-before_script:
-  - cargo install cargo-lichking
-  - rustup component add rustfmt
-  - rustup component add clippy
-script:
-  - make test
+matrix:
+  fast_finish: true
+  include:
+    - name: Run tests
+      language: rust
+      rust: stable
+      install:
+        []
+      before_script:
+        - cargo install cargo-lichking
+        - rustup component add rustfmt
+        - rustup component add clippy
+      script:
+        - make test
+
+    - name: Run CPython wrapper linter
+      language: rust
+      rust: stable
+      install:
+        []
+      before_script:
+        - cargo install cargo-lichking
+        - rustup component add rustfmt
+      script:
+        - make -C python lint
+
+    - name: Run CPython wrapper tests
+      language: rust
+      rust: nightly
+      install:
+        []
+      before_script:
+        - sudo apt update && sudo apt install python3 python3-pip python3-dev
+        - pip3 install virtualenv maturin
+        - python3 -m virtualenv venv
+      script:
+        - source venv/bin/activate && make -C python test
