--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = {version = "1.0.102", features=["std", "derive"]}
 criterion = "0.3"
 primal = "0.2"
 rand = "0.7"
+threadpool = "1.7"
 
 [[bench]]
 name = "codec_benchmark"
