--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,9 @@ matrix:
       install:
         []
       before_script:
-        - sudo apt update && sudo apt install python3 python3-pip python3-dev
-        - pip3 install virtualenv maturin
-        - python3 -m virtualenv venv
+        - sudo apt update && sudo apt install python3 python3-pip python3-dev python3-venv
+        - pip3 install --upgrade pip
+        - pip3 install maturin
+        - python3 -m venv venv
       script:
         - source venv/bin/activate && make -C python test
