--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
 
     - name: Run CPython wrapper tests
       language: rust
-      rust: nightly
+      rust: nightly-2020-03-12
       install:
         []
       before_script:
