--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 name = "raptorq"
 description = "RaptorQ (RFC6330)"
 license = "Apache-2.0"
+homepage = "https://github.com/cberner/raptorq"
 repository = "https://github.com/cberner/raptorq"
+readme = "README.md"
 version = "1.3.1"
 edition = "2018"
 authors = ["Christopher Berner <christopherberner@gmail.com>"]
@@ -42,3 +44,12 @@ debug = true
 [features]
 benchmarking = []
 python = ["pyo3"]
+
+[package.metadata.maturin]
+requires-python = ">= 3.5"
+classifier = ["Development Status :: 4 - Beta",
+              "License :: OSI Approved :: Apache Software License",
+              "Programming Language :: Python",
+              "Programming Language :: Python :: 3",
+              "Programming Language :: Python :: 3 :: Only",
+              "Programming Language :: Rust"]
