Upgrade to pyo3
This removes the dependency on nightly for building python bindings

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
 
     - name: Run CPython wrapper tests
       language: rust
-      rust: nightly-2020-08-26
+      rust: stable
       install:
         []
       before_script:
