--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,14 +5,23 @@ on:
 
 jobs:
   ci:
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: ["ubuntu-20.04", "macos-latest"]
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Install packages
+        if: startsWith(matrix.os, 'ubuntu')
         run: |
           sudo apt update
           sudo apt install -y python3 python3-pip python3-dev python3-venv
+      - name: Install packages
+        if: startsWith(matrix.os, 'macos')
+        run: |
+          brew install python3
 
       - uses: actions-rs/toolchain@v1
         with:
