--- a/deny.toml
+++ b/deny.toml
@@ -34,7 +34,7 @@ targets = [
 # The path where the advisory database is cloned/fetched into
 db-path = "~/.cargo/advisory-db"
 # The url of the advisory database to use
-db-url = "https://github.com/rustsec/advisory-db"
+db-urls = ["https://github.com/rustsec/advisory-db"]
 # The lint level for security vulnerabilities
 vulnerability = "deny"
 # The lint level for unmaintained crates
@@ -71,8 +71,8 @@ unlicensed = "deny"
 # [possible values: any SPDX 3.7 short identifier (+ optional exception)].
 allow = [
     "MIT",
-    "BSD-2-Clause",
-    "BSD-3-Clause",
+#    "BSD-2-Clause",
+#    "BSD-3-Clause",
     "Apache-2.0",
     #"Apache-2.0 WITH LLVM-exception",
 ]
