--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 serde = {version = "1.0.102", features=["std", "derive"], optional = true}
 pyo3 = {version = "0.16", features=["extension-module", "abi3-py37"], optional = true }
+wasm-bindgen = {version = "0.2", optional = true}
+js-sys = {version = "0.3.60", optional = true}
 
 [dev-dependencies]
 criterion = "0.3"
@@ -47,6 +49,7 @@ lto = false
 benchmarking = []
 python = ["pyo3"]
 serde_support = ["serde"]
+wasm = ["wasm-bindgen", "js-sys"]
 
 [package.metadata.maturin]
 requires-python = ">= 3.7"
