--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ license = "Apache-2.0"
 homepage = "https://github.com/cberner/raptorq"
 repository = "https://github.com/cberner/raptorq"
 readme = "README.md"
-version = "1.7.0"
+version = "1.7.20"
 edition = "2021"
 rust-version = "1.60"
 authors = ["Christopher Berner <christopherberner@gmail.com>"]
@@ -18,6 +18,8 @@ serde = {version = "1.0.102", features=["std", "derive"], optional = true}
 pyo3 = {version = "0.16", features=["extension-module", "abi3-py37"], optional = true }
 wasm-bindgen = {version = "0.2", optional = true}
 js-sys = {version = "0.3.60", optional = true}
+anyhow = {version = "1.0.65", optional = true}
+nom = {version = "7.1.1", optional = true}
 
 [dev-dependencies]
 criterion = "0.3"
@@ -49,7 +51,7 @@ lto = false
 benchmarking = []
 python = ["pyo3"]
 serde_support = ["serde"]
-wasm = ["wasm-bindgen", "js-sys"]
+wasm = ["wasm-bindgen", "js-sys", "anyhow", "nom"]
 
 [package.metadata.maturin]
 requires-python = ">= 3.7"
