feat: foot_gun feature, exposes parts for embed (#4)
* feat: support no_std

`metal` feature supports `no_std` in configuration `default-features = false, features = ["metal"]`.
Float calculation is done via `micromath` crate.

All previously available functionality remains under default `std` feature.

Some tweaking of `python` and `wasm` features was done to compile tests.

* feat: get rid of floats (#2)

* feat: remove conversion to f64, fix features

* chore: uncomment symbols_required checker, fmt

* revert: add cdylib target for python support

* fix: generalize crate type

* feat: foot_gun feature, exposes parts for embed

---------

Co-authored-by: Slesarew <33295157+Slesarew@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,8 @@ python = ["pyo3", "std"]
 serde_support = ["serde", "std"]
 std = []
 wasm = ["wasm-bindgen", "js-sys", "std"]
+foot_gun = []
+
 
 [package.metadata.maturin]
 requires-python = ">= 3.7"
