--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,12 @@
 name = "raptorq"
 requires-python = ">=3.7"
 dynamic = ["version"]
+classifier = ["Development Status :: 4 - Beta",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Rust"]
 
 [build-system]
 requires = ["maturin>=0.11,<0.12"]
