--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,15 +24,10 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.toml', '.github/workflows/*.yml') }}
 
-      - name: Install packages
-        if: startsWith(matrix.os, 'ubuntu')
-        run: |
-          sudo apt update
-          sudo apt install -y python3 python3-pip python3-dev python3-venv
-      - name: Install packages
-        if: startsWith(matrix.os, 'macos')
-        run: |
-          brew install python3 openssl
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
       - uses: actions-rs/toolchain@v1
         with:
