--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,12 @@ jobs:
         if: steps.rust-cache.outputs.cache-hit != 'true'
         run: rustup run --install 1.74 cargo install --force --version 0.14.3 cargo-deny --locked && rustup run --install 1.85 cargo install --version 1.13.0 just --locked
         
+      - name: Clippy
+        run: cargo clippy --all --all-targets -- -Dwarnings
+
+      - name: Format
+        run: cargo fmt --all -- --check
+
       - name: Run tests
         run: just test
 
