--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,14 @@ jobs:
         with:
           components: rustfmt, clippy
 
-      - name: Install cargo-deny and just
+      - name: Install cargo-deny
         if: steps.rust-cache.outputs.cache-hit != 'true'
-        run: rustup run --install 1.74 cargo install --force --version 0.14.3 cargo-deny --locked && rustup run --install 1.85 cargo install --version 1.13.0 just --locked
-        
+        run: rustup run --install 1.85 cargo install --force --version 0.16.2 cargo-deny --locked
+
+      - name: Install just
+        if: steps.rust-cache.outputs.cache-hit != 'true'
+        run: rustup run --install 1.85 cargo install --force --version 1.36.0 just --locked
+
       - name: Clippy
         run: cargo clippy --all --all-targets -- -Dwarnings
 
